# rawform

./: .dockerignore  .env.example  AGENTS.md  Cargo.toml  Dockerfile  Justfile  LICENSE  README.md
.github/workflows/: ci.yml
integrations/activepieces/: LICENSE  README.md  package-lock.json  package.json  tsconfig.json
integrations/activepieces/src/: index.ts
integrations/activepieces/src/lib/: rawform-client.ts
integrations/activepieces/src/lib/triggers/: rawform-submission.trigger.ts
migrations/: 001_create_clients.sql  002_create_form_definitions.sql  002_create_forms.sql  003_create_forms.sql  003_create_submissions.sql
migrations/postgres/: 001_create_clients.sql  002_create_forms.sql
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs
src/api/: admin.rs  auth.rs  definitions.rs  forms.rs  mod.rs  serde_util.rs  submit.rs
src/db/: clients.rs  definitions.rs  forms.rs  instances.rs  mod.rs  submissions.rs
src/models/: client.rs  definition.rs  form.rs  instance.rs  mod.rs  schema.rs  submission.rs
static/: builder.html  builder.js  form.html  form.js  index.html  index.js  style.css
todo/concept/: todo.md
