[package]
name = "rawform"
version = "0.1.2"
edition = "2024"

[[bin]]
name = "rawform"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8", features = ["json", "macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.9", features = ["runtime-tokio", "tls-rustls-ring", "sqlite", "postgres", "chrono", "uuid", "json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.7", features = ["fs", "cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
dotenvy = "0.15"
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
